Admin: add Notice + Ad forms; public pages load them

--- a/admin/index.html
+++ b/admin/index.html
@@ -8,25 +8,58 @@
 </head>
 <body>
   <main class="container">
-    <article class="card" style="max-width:640px">
-      <h2>Admin (diagnostic)</h2>
+    <article class="card" style="max-width:860px">
+      <h2>Admin</h2>
       <p id="who" class="tldr">Checking sign-in…</p>
-      <div style="display:flex; gap:8px; margin-top:12px">
-  <a class="btn" id="home" href="/">Home</a>
-  <button class="btn" id="backToLogin">Back to Login</button>
-  <button class="btn" id="logout">Log out</button>
-</div>
 
-      <p class="small">If this page loads and shows your email, auth works.</p>
+      <!-- NOTICE FORM -->
+      <section class="card" style="margin-top:12px">
+        <h3>Notice Bar</h3>
+        <label>Text</label>
+        <textarea id="noticeTextInput" rows="2" placeholder="Education only — not financial advice."></textarea>
+
+        <div style="display:flex; gap:12px; align-items:center; flex-wrap:wrap; margin:8px 0">
+          <label>Priority <input id="noticePriority" type="number" value="10" style="width:120px"></label>
+          <label><input id="noticeActive" type="checkbox" checked> Active</label>
+        </div>
+
+        <button class="btn btn-primary" id="saveNotice">Save Notice</button>
+        <span id="noticeMsg" class="small"></span>
+      </section>
+
+      <!-- AD FORM -->
+      <section class="card" style="margin-top:12px">
+        <h3>Sidebar Ad</h3>
+        <label>Headline</label>
+        <input id="adHeadline" type="text" placeholder="Compare Mortgage Deals">
+
+        <label>Body</label>
+        <textarea id="adBody" rows="2" placeholder="Find a lower rate in minutes."></textarea>
+
+        <label>Link URL</label>
+        <input id="adLink" type="url" placeholder="https://example.com">
+
+        <div style="margin:8px 0">
+          <label><input id="adActive" type="checkbox" checked> Active</label>
+        </div>
+
+        <button class="btn btn-primary" id="saveAd">Save Ad</button>
+        <span id="adMsg" class="small"></span>
+      </section>
+
+      <div style="display:flex; gap:8px; margin-top:16px">
+        <a class="btn" href="/">Home</a>
+        <button class="btn" id="backToLogin">Back to Login</button>
+        <button class="btn" id="logout">Log out</button>
+      </div>
     </article>
   </main>
 
-  <!-- Load scripts at the end, in order -->
+  <!-- Scripts at the end -->
   <script src="/assets/firebase-config.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore-compat.js"></script>
-
   <script src="/admin/admin.js"></script>
 </body>
 </html>
