--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <p>Short lessons. Simple language. Useful tools.</p>
           <p><a class="btn" href="/finance/asset-vs-liability.html">Start: Asset vs Liability →</a></p>
           <p><a class="btn" href="/calculators/mortgage-overpayment.html">Try a Calculator →</a></p>
+		  <p><a class="btn" href="/lessons/index.html">All Lessons →</a></p>
+
         </article>
       </section>
       <aside id="adBox"></aside>
