Fix login page: prevent refresh; load scripts once; redirect home

--- a/auth/login.html
+++ b/auth/login.html
@@ -13,6 +13,7 @@
     <article class="card" style="max-width:520px">
       <h2>Log in / Sign up</h2>
 
+      <!-- not a <form> (prevents auto-submit refresh) -->
       <label for="email">Email</label>
       <input id="email" type="email" placeholder="you@example.com" autocomplete="email" />
 
@@ -20,20 +21,20 @@
       <input id="password" type="password" placeholder="••••••••" autocomplete="current-password" />
 
       <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap;">
-        <button type="button" class="btn btn-primary" id="loginBtn">Log in</button>
-        <button type="button" class="btn" id="signupBtn">Sign up</button>
+        <button id="loginBtn"  type="button" class="btn btn-primary">Log in</button>
+        <button id="signupBtn" type="button" class="btn">Sign up</button>
+        <a class="btn" href="/">Home</a>
       </div>
 
       <p id="msg" class="small"></p>
-      <p class="small">This site is for <strong>education only</strong>, not financial advice.</p>
-      <p class="small"><a href="/admin/index.html">Go to Admin</a> (admins only)</p>
+      <p class="small">Educational only — not financial advice.</p>
     </article>
   </main>
 
-  <!-- Load scripts ONCE, in this order -->
+  <!-- Scripts at the very end, in order (once) -->
   <script src="/assets/firebase-config.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
-<script src="/auth/auth.js"></script>h.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
+  <script src="/auth/auth.js"></script>
 </body>
 </html>
