--- a/calculators/mortgage-overpayment.html
+++ b/calculators/mortgage-overpayment.html
@@ -66,5 +66,34 @@
         `Finish in: ${monthsToYears(res.months)}`;
     });
   </script>
+  <!-- Bottom Nav -->
+<nav class="bottom-nav" role="navigation" aria-label="Primary">
+  <ul>
+    <li><a href="/" data-match="/">
+      <span class="icon">🏠</span><span>Home</span>
+    </a></li>
+    <li><a href="/lessons/index.html" data-match="/lessons/">
+      <span class="icon">📚</span><span>Lessons</span>
+    </a></li>
+    <li><a href="/calculators/mortgage-overpayment.html" data-match="/calculators/">
+      <span class="icon">🧮</span><span>Calculator</span>
+    </a></li>
+    <!-- Login / Logout (toggled by nav.js if Firebase available) -->
+    <li><a id="bn-login" href="/auth/login.html">
+      <span class="icon">🔑</span><span>Log in</span>
+    </a></li>
+    <li><a id="bn-logout" href="/auth/login.html" hidden>
+      <span class="icon">🚪</span><span>Log out</span>
+    </a></li>
+    <!-- Admin (only shown for admins) -->
+    <li><a id="bn-admin" href="/admin/index.html" data-match="/admin/" hidden>
+      <span class="icon">🛠️</span><span>Admin</span>
+    </a></li>
+  </ul>
+</nav>
+
+<!-- Load AFTER your other scripts -->
+<script src="/assets/nav.js"></script>
+
 </body>
 </html>
