--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Main -->
   <main class="container">
-    <div style="display:grid; grid-template-columns:2fr 1fr; gap:16px;">
+<div class="grid-2">
       <section>
         <article class="card">
           <h2>Welcome to Pennyriser</h2>
@@ -96,6 +96,35 @@
   });
 })();
 </script>
+<!-- Bottom Nav -->
+<nav class="bottom-nav" role="navigation" aria-label="Primary">
+  <ul>
+    <li><a href="/" data-match="/">
+      <span class="icon">🏠</span><span>Home</span>
+    </a></li>
+    <li><a href="/lessons/index.html" data-match="/lessons/">
+      <span class="icon">📚</span><span>Lessons</span>
+    </a></li>
+    <li><a href="/calculators/mortgage-overpayment.html" data-match="/calculators/">
+      <span class="icon">🧮</span><span>Calculator</span>
+    </a></li>
+    <!-- Login / Logout (toggled by nav.js if Firebase available) -->
+    <li><a id="bn-login" href="/auth/login.html">
+      <span class="icon">🔑</span><span>Log in</span>
+    </a></li>
+    <li><a id="bn-logout" href="/auth/login.html" hidden>
+      <span class="icon">🚪</span><span>Log out</span>
+    </a></li>
+    <!-- Admin (only shown for admins) -->
+    <li><a id="bn-admin" href="/admin/index.html" data-match="/admin/" hidden>
+      <span class="icon">🛠️</span><span>Admin</span>
+    </a></li>
+  </ul>
+</nav>
+
+<!-- Load AFTER your other scripts -->
+<script src="/assets/nav.js"></script>
+
 
 </body>
 </html>
