Homepage: two CTAs (Personal Finance, Stock Trading). Add Trading placeholder page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
     <h1>Learn money. Simply.</h1>
     <p>Personal finance, investing & trading—short lessons and practical tools.</p>
     <div class="cta-row">
-      <a class="btn big btn-primary" href="/lessons/index.html">Start Learning</a>
-      <a class="btn big" href="/calculators/mortgage-overpayment.html">Use Calculators</a>
-      <a class="btn big" href="/finance/asset-vs-liability.html">Beginner: Asset vs Liability</a>
-    </div>
+  <a class="btn big btn-primary" href="/lessons/index.html">Learn Personal Finance</a>
+  <a class="btn big" href="/trading/index.html">Learn Stock Trading</a>
+</div>
   </main>
 
   <footer class="container">
